--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 repositories {
@@ -10,4 +11,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'commons-io:commons-io:2.15.1'
     implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
+}
+
+shadowJar {
+    manifest {
+        attributes 'Main-Class': 'io.github.nickid2018.transkeygen.Main'
+    }
 }
